.provarCaches/00D5f000005vwGkEAI/objects/rstk__rtroutopermach__c.object
<CustomObject>
    <description>rtroutopermach__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__rtroutopermach_oper__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstk__rtroutopermach_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__rtroutopermach_oper__r.Name &amp; &apos;_&apos; &amp; TEXT(rstk__rtroutopermach_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rtroutopermach_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Division associated with this Machine Operation</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Routing Operation Machines</relationshipLabel>
        <relationshipName>Routing_Operation_Machines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtroutopermach_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Item associated with this Machine Operation</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Routing Operation Machines</relationshipLabel>
        <relationshipName>Routing_Operation_Machines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtroutopermach_machhr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Machine Hours associated with this Machine Operation</inlineHelpText>
        <label>Machine Hrs, Std</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtroutopermach_machhrsim__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Simulated Machine Hours for this Machine Operation</inlineHelpText>
        <label>Machine Hrs, Sim</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtroutopermach_machno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Machine Number associated with this Machine Operation</inlineHelpText>
        <label>Mfg Machine</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstk__rtmach__c.rstk__rtmach_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__rtroutopermach_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__rtmach__c</referenceTo>
        <relationshipLabel>Routing Operation Machines</relationshipLabel>
        <relationshipName>Routing_Operation_Machines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtroutopermach_oper__c</fullName>
        <inlineHelpText>This is the Operation  Number associated with this Machine Operation</inlineHelpText>
        <label>Operation Number</label>
        <referenceTo>rstk__rtroutoper__c</referenceTo>
        <relationshipLabel>Routing Operation Machines</relationshipLabel>
        <relationshipName>Routing_Operation_Machines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__rtroutopermach_pcntapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the percent applied for this Machine Operation</inlineHelpText>
        <label>Percent Applied</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtroutopermach_scrapfactor__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Scrap Factor associated with this Machine Operation</inlineHelpText>
        <label>Scrap Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtroutopermach_seq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Operation Sequence Number associated with this Machine Operation</inlineHelpText>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtroutopermach_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Site associated with this Machine Operation</inlineHelpText>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstk__sysite__c.rstk__sysite_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__rtroutopermach_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Routing Operation Machines</relationshipLabel>
        <relationshipName>Routing_Operation_Machines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Routing Operation Machine</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Operation Machines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Percent_Applied_Range</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__rtroutopermach_pcntapplied__c &lt; 0 || rstk__rtroutopermach_pcntapplied__c &gt; 1.0</errorConditionFormula>
        <errorDisplayField>rstk__rtroutopermach_pcntapplied__c</errorDisplayField>
        <errorMessage>Percent Applied must be between 0 and 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Scrap_Factor_Range</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__rtroutopermach_scrapfactor__c &lt; 0 ||  rstk__rtroutopermach_scrapfactor__c &gt; 1.0</errorConditionFormula>
        <errorDisplayField>rstk__rtroutopermach_scrapfactor__c</errorDisplayField>
        <errorMessage>Scrap Factor must be between 0 and 1</errorMessage>
    </validationRules>
</CustomObject>